[package]
name = "sub-convtr"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "Convert between SRT, VTT, TXT, TSV, and JSON subtitle/transcript formats."
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
aspasia = "0.2.1"
clap = { version = "4.5.57", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
